<resources>
    <string name="app_name">InventoryApp</string>
    <string name="emptyview">Empty list items</string>
    <string name="todo">TODO</string>
    <string name="itemname">Item Name</string>
    <string name="itemquantity">Sold</string>
    <string name="inventory">Inventory</string>
    <string name="itemprice">ItemPrice</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_quantity">Set Quantity</string>
    <string name="product_price">Set Price</string>
    <string name="product_image">Click to upload image</string>
    <string name="seller_phone">Seller Contact</string>
    <string name="product_sold">Current Sold</string>
    <string name="delete_item">Delete Item</string>
    <string name="order_more">Order More</string>
    <string name="update">Update</string>
    <string name="err_bad_uri">Error!! Bad Uri</string>
    <string name="sold">Sold</string>
    <string name="add_product_title">Product Title</string>
    <string name="save_product_label">Product Label</string>
    <string name="edit_product_title">Edit Product Title</string>
    <string name="update_product_label">Update Product Label</string>
    <string name="menu_settings">Menu</string>
    <string name="action_insert_random_data">Insert Random Data</string>
    <string name="action_delete_all_entries">Delete All</string>
    <string name="err_external_storage_permissions">Error!!</string>
    <string name="err_missing_textfields">You need to complete all fields</string>
    <string name="err_inserting_product">Error inserting please try again</string>
    <string name="ok_updated">Updated</string>
    <string name="unsaved_changes_dialog_msg">msg error</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Deleted</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_pet_failed">There was a problem deleting  product</string>
    <string name="editor_delete_pet_successful">Deleted successfully</string>
    <string name="input_quantity">10</string>
    <string name="set_price">20</string>
    <string name="set_sold">5</string>
</resources>
