<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_thumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/invent_item_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemname"
            android:textStyle="bold"
            tools:text="Item Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/item_quantity_text"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/itemquantity"
                app:layout_constraintTop_toTopOf="@id/invent_item_name_text"
                tools:text="Sold" />

            <TextView
                android:id="@+id/item_invent_text"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                tools:text="Inventory" />

            <TextView
                android:id="@+id/item_price_text"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/itemprice"
                tools:text="Price" />

            <Button
                android:id="@+id/bt_sold"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/sold"
                android:textSize="10sp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
