<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Product Name -->
        <EditText
            android:id="@+id/product_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:text="@string/product_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/product_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            app:layout_constraintLeft_toLeftOf="@id/product_name_input"
            app:layout_constraintTop_toBottomOf="@id/product_name_input" />

        <!-- Product Description -->
        <EditText
            android:id="@+id/product_desc_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/product_description"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@id/product_name_text"
            app:layout_constraintTop_toBottomOf="@id/product_name_text"
            tools:layout_editor_absoluteY="0dp"
            tools:text="Product Description"/>

        <TextView
            android:id="@+id/product_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            app:layout_constraintLeft_toLeftOf="@id/product_desc_input"
            app:layout_constraintTop_toBottomOf="@id/product_desc_input" />

        <!-- Set Quantity -->
        <EditText
            android:id="@+id/product_invent_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/input_quantity"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@id/product_desc_text"
            app:layout_constraintTop_toBottomOf="@id/product_desc_text"
            tools:layout_editor_absoluteY="0dp"
            tools:text="20"/>

        <TextView
            android:id="@+id/product_invent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            app:layout_constraintLeft_toLeftOf="@id/product_invent_input"
            app:layout_constraintTop_toBottomOf="@id/product_invent_input" />

        <!-- Set Price -->
        <EditText
            android:id="@+id/product_price_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/set_price"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@id/product_invent_text"
            app:layout_constraintTop_toBottomOf="@id/product_invent_text"
            tools:layout_editor_absoluteY="0dp"
            tools:text="20"/>

        <TextView
            android:id="@+id/product_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            app:layout_constraintLeft_toLeftOf="@id/product_price_input"
            app:layout_constraintTop_toBottomOf="@id/product_price_input" />

        <!-- Set Image -->
        <TextView
            android:id="@+id/product_image_text"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/product_image"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" />

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:srcCompat="@mipmap/ic_launcher"
            app:layout_constraintTop_toBottomOf="@id/product_image_text"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            />

        <!-- Set Product Sold Counts -->
        <EditText
            android:id="@+id/product_sold_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/set_sold"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@id/product_price_text"
            app:layout_constraintTop_toBottomOf="@id/product_price_text"
            tools:layout_editor_absoluteY="0dp"
            tools:text="Product Sold"/>

        <TextView
            android:id="@+id/product_sold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_sold"
            tools:text="Current Sold"
            app:layout_constraintLeft_toLeftOf="@id/product_sold_input"
            app:layout_constraintTop_toBottomOf="@id/product_sold_input" />

        <!-- Set Product Seller Contact-->
        <EditText
            android:id="@+id/product_seller_phone_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@id/product_sold_text"
            app:layout_constraintTop_toBottomOf="@id/product_sold_text"
            tools:layout_editor_absoluteY="0dp"
            tools:text="Seller Contact"/>

        <TextView
            android:id="@+id/product_seller_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seller_phone"
            tools:text="Seller Contact"
            app:layout_constraintLeft_toLeftOf="@id/product_seller_phone_input"
            app:layout_constraintTop_toBottomOf="@id/product_seller_phone_input" />

        <!-- Buttons -->

        <Button
            android:id="@+id/bt_update"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/product_image_view"
            app:layout_constraintLeft_toLeftOf="@id/product_image_view"
            android:layout_marginTop="20dp"
            android:text="@string/update" />


        <Button
            android:id="@+id/bt_order"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bt_update"
            app:layout_constraintLeft_toLeftOf="@id/bt_update"
            android:layout_marginTop="20dp"
            android:text="@string/order_more" />

        <Button
            android:id="@+id/bt_delete"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bt_order"
            app:layout_constraintLeft_toLeftOf="@id/bt_order"
            android:layout_marginTop="20dp"
            android:text="@string/delete_item" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
